# MyNKF

./: .editorconfig  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.ja.md  README.md
.agents/: AGENTS.md
.github/workflows/: release.yml
docs/: DIAGRAM.md  FOOTPRINTS.md  SPEC.md  TEST_REPORT.md
src/: lib.rs  main.rs
