[package]
name = "MyNKF"
version = "0.1.0"
edition = "2024"

[dependencies]

[profile.release]
opt-level = 'z'       # Optimize for binary size
lto = true            # Link-Time Optimization
codegen-units = 1     # Integrate code generation units
panic = 'abort'       # Abort on panic to save space
strip = true          # Strip symbols and debug info

