[package]
name = "MyNKF"
version = "1.5.2"
edition = "2024"

[lib]
name = "mynkf"
path = "src/lib.rs"

[[bin]]
name = "mynkf"
path = "src/main.rs"

[[bin]]
name = "mynkf-gui"
path = "src/bin/mynkf-gui.rs"

[dependencies]
eframe = "0.35"
egui = "0.35"
rfd = "0.17"

# Target-specific dependencies removed to use direct Win32 FFI for lower footprint

[profile.release]
opt-level = 'z'       # Optimize for binary size
lto = true            # Link-Time Optimization
codegen-units = 1     # Integrate code generation units
panic = 'abort'       # Abort on panic to save space
strip = true          # Strip symbols and debug info

